# jxr-to-jpeg

./: AGENTS.md  README.md  build_app.bat  converter_app.py  hdr_p3.icc  install_deps.bat  installer.nsi  jxr_to_jpeg.py  pyproject.toml  requirements.txt  run_app.bat  watcher.py
tests/: test_converter.py
